
* Checkers must now keep a 1 to 1 relationship between "msgid" (ie: C1234) and "symbol" (ie : human-readable-symbol)
* In checkers, an old_names can now be used for multiple new messages

Caused by #1164. It means if you do a partial old_names for a message definition an exception will tell you that you
must rename the associated identification.


What's New in Pylint 2.3.0?
===========================

Release date: 2019-02-27

* Protect against `NonDeducibleTypeHierarchy` when calling semi-private `is_subtype`

  `astroid.helpers.is_subtype` raises `NonDeducibleTypeHierarchy` when it cannot infer
  the base classes of the given types, but that makes sense in its context given that
  the method is mostly used to inform the inference process about the hierarchy of classes.
  Doesn't make that much sense for ``pylint`` itself, which is why we're handling the
  exception here, rather than in ``astroid``

  Close PyCQA/astroid#644

* Added a new command line option ``list-groups`` for listing all the check groups ``pylint`` knows about.

* Allow ``BaseException`` for emitting ``broad-except``, just like ``Exception``.

  Close #2741

* Fixed a crash that occurred for ``bad-str-strip-call`` when ``strip()`` received ``None``

  Close #2743

* Don't emit ``*-not-iterating`` checks for builtins consumed by ``itertools``

  Close #2731

* Fix a crash caused by iterating over ``Uninferable`` in a string formatting check.

  Close #2727

* Fixed false positives for ``no-self-argument`` and ``unsubscriptable-object`` when using ``__class_getitem__`` (new in Python 3.7)

  Close #2416

* Support ``Ellipsis`` as a synonym for ``pass`` statements.

  Close #2718

* ``fixme`` gets triggered only on comments.

  Close #2321

* Fixed a false positive for ``unused-variable`` and ``nonlocal`` assignments

  Close #2671

* Added ``load_configuration()`` hook for plugins

  New optional hook for plugins is added: ``load_configuration()``.