@@ -2,4 +2,4 @@
 import logging as renamed_logging
 
 
-renamed_logging.info(f'Read {renamed_logging} from globals')  # [logging-fstring-interpolation]
+renamed_logging.info(f'Read {renamed_logging} from globals')  # [logging-format-interpolation]
