@@ -11,6 +11,7 @@
 import astroid
 
 from pylint.checkers import logging
+from pylint.interfaces import UNDEFINED
 from pylint.testutils import CheckerTestCase, Message, set_config
 
 
@@ -63,7 +64,7 @@ class TestLoggingModuleDetection(CheckerTestCase):
         with self.assertAddsMessages(Message("logging-not-lazy", node=stmts[1])):
             self.checker.visit_call(stmts[1])
 
-    def _assert_brace_format_no_messages(self, stmt):
+    def _assert_logging_format_no_messages(self, stmt):
         stmts = astroid.extract_node(
             """
         import logging #@
@@ -77,7 +78,7 @@ class TestLoggingModuleDetection(CheckerTestCase):
         with self.assertNoMessages():
             self.checker.visit_call(stmts[1])
 
-    def _assert_brace_format_message(self, msg, stmt):
+    def _assert_logging_format_message(self, msg, stmt, args=None, with_too_many=False):
         stmts = astroid.extract_node(
             """
         import logging #@
@@ -88,38 +89,74 @@ class TestLoggingModuleDetection(CheckerTestCase):
         )
         self.checker.visit_module(None)
         self.checker.visit_import(stmts[0])
-        with self.assertAddsMessages(Message(msg, node=stmts[1])):
+        messages = [
+            Message(msg, node=stmts[1], args=args, confidence=UNDEFINED)
+        ]
+        if with_too_many:
+            messages.append(Message("logging-too-many-args", node=stmts[1], confidence=UNDEFINED))
+        with self.assertAddsMessages(*messages):
             self.checker.visit_call(stmts[1])
 
-    def _assert_brace_format_too_few_args(self, stmt):
-        self._assert_brace_format_message("logging-too-few-args", stmt)
+    def _assert_logging_format_too_few_args(self, stmt):
+        self._assert_logging_format_message("logging-too-few-args", stmt)
 
-    def _assert_brace_format_too_many_args(self, stmt):
-        self._assert_brace_format_message("logging-too-many-args", stmt)
+    def _assert_logging_format_too_many_args(self, stmt):
+        self._assert_logging_format_message("logging-too-many-args", stmt)
 
     @set_config(logging_format_style="new")
     def test_brace_format_style_matching_arguments(self):
-        self._assert_brace_format_no_messages("('constant string')")
-        self._assert_brace_format_no_messages("('{}')")
-        self._assert_brace_format_no_messages("('{}', 1)")
-        self._assert_brace_format_no_messages("('{0}', 1)")
-        self._assert_brace_format_no_messages("('{named}', {'named': 1})")
-        self._assert_brace_format_no_messages("('{} {named}', 1, {'named': 1})")
-        self._assert_brace_format_no_messages("('{0} {named}', 1, {'named': 1})")
+        self._assert_logging_format_no_messages("('constant string')")
+        self._assert_logging_format_no_messages("('{}')")
+        self._assert_logging_format_no_messages("('{}', 1)")
+        self._assert_logging_format_no_messages("('{0}', 1)")
+        self._assert_logging_format_no_messages("('{named}', {'named': 1})")
+        self._assert_logging_format_no_messages("('{} {named}', 1, {'named': 1})")
+        self._assert_logging_format_no_messages("('{0} {named}', 1, {'named': 1})")
 
     @set_config(logging_format_style="new")
     def test_brace_format_style_too_few_args(self):
-        self._assert_brace_format_too_few_args("('{}, {}', 1)")
-        self._assert_brace_format_too_few_args("('{0}, {1}', 1)")
-        self._assert_brace_format_too_few_args("('{named1}, {named2}', {'named1': 1})")
-        self._assert_brace_format_too_few_args("('{0}, {named}', 1)")
-        self._assert_brace_format_too_few_args("('{}, {named}', {'named': 1})")
-        self._assert_brace_format_too_few_args("('{0}, {named}', {'named': 1})")
+        self._assert_logging_format_too_few_args("('{}, {}', 1)")
+        self._assert_logging_format_too_few_args("('{0}, {1}', 1)")
+        self._assert_logging_format_too_few_args("('{named1}, {named2}', {'named1': 1})")
+        self._assert_logging_format_too_few_args("('{0}, {named}', 1)")
+        self._assert_logging_format_too_few_args("('{}, {named}', {'named': 1})")
+        self._assert_logging_format_too_few_args("('{0}, {named}', {'named': 1})")
 
     @set_config(logging_format_style="new")
     def test_brace_format_style_not_enough_arguments(self):
-        self._assert_brace_format_too_many_args("('constant string', 1, 2)")
-        self._assert_brace_format_too_many_args("('{}', 1, 2)")
-        self._assert_brace_format_too_many_args("('{0}', 1, 2)")
-        self._assert_brace_format_too_many_args("('{}, {named}', 1, 2, {'named': 1})")
-        self._assert_brace_format_too_many_args("('{0}, {named}', 1, 2, {'named': 1})")
+        self._assert_logging_format_too_many_args("('constant string', 1, 2)")
+        self._assert_logging_format_too_many_args("('{}', 1, 2)")
+        self._assert_logging_format_too_many_args("('{0}', 1, 2)")
+        self._assert_logging_format_too_many_args("('{}, {named}', 1, 2, {'named': 1})")
+        self._assert_logging_format_too_many_args("('{0}, {named}', 1, 2, {'named': 1})")
+
+    @set_config(logging_format_style="new")
+    def test_fstr_not_new_format_style_matching_arguments(self):
+        msg = "logging-format-interpolation"
+        args=('{', '')
+        self._assert_logging_format_message(msg, "(f'{named}')", args)
+
+    @set_config(logging_format_style="fstr")
+    def test_modulo_not_fstr_format_style_matching_arguments(self):
+        msg = "logging-format-interpolation"
+        args=('f-string', '')
+        with_too_many = True
+        self._assert_logging_format_message(msg, "('%s', 1)", args, with_too_many)
+        self._assert_logging_format_message(msg, "('%(named)s', {'named': 1})", args, with_too_many)
+        self._assert_logging_format_message(msg, "('%s %(named)s', 1, {'named': 1})", args, with_too_many)
+
+    @set_config(logging_format_style="fstr")
+    def test_brace_not_fstr_format_style_matching_arguments(self):
+        msg = "logging-format-interpolation"
+        args=('f-string', '')
+        with_too_many = True
+        self._assert_logging_format_message(msg, "('{}', 1)", args, with_too_many)
+        self._assert_logging_format_message(msg, "('{0}', 1)", args, with_too_many)
+        self._assert_logging_format_message(msg, "('{named}', {'named': 1})", args, with_too_many)
+        self._assert_logging_format_message(msg, "('{} {named}', 1, {'named': 1})", args, with_too_many)
+        self._assert_logging_format_message(msg, "('{0} {named}', 1, {'named': 1})", args, with_too_many)
+
+    @set_config(logging_format_style="fstr")
+    def test_fstr_format_style_matching_arguments(self):
+        self._assert_logging_format_no_messages("(f'constant string')")
+        self._assert_logging_format_no_messages("(f'{named}')")
